Margin error Resolved!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>RISHITA SHAW</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="img/circle-cropped (1).png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -18,11 +19,7 @@
 </head>
 
 <body>
-<section id="nav">
-
-
-
-
+<!-- <section id="nav">
   <div class="row nav-nav">
     <div class="col name-nav">
       RISHITA SHAW
@@ -33,7 +30,7 @@
         <ul class="navbar">
 
           <li class="nav-item">
-            <a class="nav-link" href="#skills">My skills</a>
+            <a class="nav-link" href="#skills">My Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about-me">About Me</a>
@@ -47,7 +44,35 @@
     </div>
 
   </div>
+</section> -->
+
+<section id="nav">
+  <div class=" name-nav">
+    RISHITA SHAW
+  </div>
+  <div>
+    <nav class="navbar">
+
+      <ul class="navbar">
+
+        <li class="nav-item">
+          <a class="nav-link" href="#skills">My Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about-me">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#hire-me">Hire Me</a>
+        </li>
+      </ul>
+
+    </nav>
+  </div>
 </section>
+
+
+
+
   <section id="intro">
     <div class="row">
       <div class="col">
@@ -75,8 +100,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="feat-img">
-            <img src="Rishita Shaw.png" height="250" width="350" alt="">
+          <div class="feat-img" >
+            <img src="img/Rishita Shaw.png" height="250" width="350" alt="">
           </div>
         </div>
 
@@ -91,7 +116,7 @@
       <div class="row">
         <div class="col">
           <div class="web dev">
-            <img src="heart.svg" alt="logo">
+            <img src="svgs/heart.svg" alt="logo">
             <h3>front end</h3>
             <p>HTML</p>
             <p>CSS</p>
@@ -100,7 +125,7 @@
         </div>
         <div class="col">
           <div class="web dev">
-            <img src="board1.svg" alt="logo">
+            <img src="svgs/board1.svg" alt="logo">
             <h3>backend end</h3>
             <p>kotlin</p>
             <p>django</p>
@@ -109,7 +134,7 @@
         </div>
         <div class="col">
           <div class="web dev">
-            <img src="hour.svg" alt="logo">
+            <img src="svgs/hour.svg" alt="logo">
             <h3>softwares</h3>
             <p>c/c++</p>
             <p>python</p>
@@ -124,12 +149,12 @@
   <section id="about-me">
     <h1>GET TO KNOW RISHITA!</h1>
     <div class="img-pro" width=25% height=25%>
-      <img src="circle-cropped (1).png" alt="profile pic">
+      <img src="img/circle-cropped (1).png" alt="profile pic">
     </div>
 
     <div class="about">
-      <p>Hello! i am rishita shaw. I am a first year student at national institute of technology, drgapur.</p>
-      <p>I love coffee, book, and coding.</p>
+      <p>Hello! I am Rishita Shaw. I am a first year student at National Institute of Technology, Durgapur.</p>
+      <p class="about__text">I love coffee, books, and coding.</p>
       <p>How about we discuss our next project?</p>
     </div>
   </section>
@@ -140,8 +165,8 @@
     <img src="logo" alt="">
   </section>
 
-<section id="hire-me">
-  <div class="container logo">
+<!-- <section id="hire-me">
+  <div class="container logo hire__socials">
 <div class="row">
 
 <div class="col">
@@ -149,31 +174,51 @@
 
     <li>
       <a href="https://github.com/Theseregrets">
-        <img src="github-seeklogo.com.svg" alt="" width=15% height=15%>
+        <img src="svgs/github-seeklogo.com.svg" alt="" width=15% height=15%>
       </a>
     </li>
     </div>
     <div class="col lp">
       <li>
         <a href="https://github.com/Theseregrets">
-          <img src="facebook-black-48dp.svg" alt="" width=15% height=15%>
+          <img src="svgs/facebook-black-48dp.svg" alt="" width=15% height=15%>
         </a>
       </li>
     </div>
 <div class="col">
   <li>
     <a href="https://github.com/Theseregrets">
-      <img src="linkedin-icon-seeklogo.com.svg" alt="" width=15% height=15%>
+      <img src="svgs/linkedin-icon-seeklogo.com.svg" alt="" width=15% height=15%>
     </a>
   </li>
 </div>
 
 </div>
 </div>
+</section> -->
+
+<section id="hire-me">
+  <div class="hire__element">
+
+    <a href="https://github.com/Theseregrets">
+      <img src="svgs/github-seeklogo.com.svg" class="hire__svg">
+    </a>
+  </div>
+  <div class="hire__element">
+    <a href="https://github.com/Theseregrets">
+      <img src="svgs/facebook-black-48dp.svg" class="hire__svg">
+    </a>
+  </div>
+  <div class="hire__element">
+    <a href="https://github.com/Theseregrets">
+      <img src="svgs/linkedin-icon-seeklogo.com.svg" class="hire__svg">
+    </a>
+  </div>
+
 </section>
 
-  <footer>
-    <p>© RISHITA SHAW 2021</p>
+  <footer class="footer">
+    <p>&copy; RISHITA SHAW 2021</p>
   </footer>
 </body>
 
