--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
     </section>
 
-    <!-- 
+    <!--
   <section id="skills">
     <h1 class="my-skills">My Skills</h1>
     <div class="container">
@@ -263,12 +263,12 @@
         </a>
       </div>
       <div class="hire__element">
-        <a href="https://github.com/Theseregrets">
+        <a href="https://www.facebook.com/aarti.ahuja.50596/">
           <img src="svgs/facebook-black-48dp.svg" class="hire__svg" />
         </a>
       </div>
       <div class="hire__element">
-        <a href="https://github.com/Theseregrets">
+        <a href="https://www.linkedin.com/in/rishita-shaw-75901a186/">
           <img src="svgs/linkedin-icon-seeklogo.com.svg" class="hire__svg" />
         </a>
       </div>
