--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <nav class="navbar">
           <ul class="navbar">
             <li class="nav-item">
-              <a class="nav-link" href="#skills">My Skills</a>
+              <a class="nav-link" href="#skill">My Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about-me">About Me</a>
