--- a/index.html
+++ b/index.html
@@ -18,27 +18,13 @@
       crossorigin="anonymous"
     />
 
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,300;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
 
   <body>
@@ -91,8 +77,13 @@
     <section id="intro">
       <div class="row">
         <div class="col">
-          <h1 class="hero">EXPERIENCE WEB DEVELOPMENT ON ANOTHER LEVEL!</h1>
-          <h2>meet Rishita Shaw</h2>
+          <h1 class="hero" data-aos="fade-zoom-in"
+     data-aos-easing="ease-in-back"
+
+     data-aos-offset="0" data-aos-duration="1000">EXPERIENCE WEB DEVELOPMENT ON ANOTHER LEVEL!</h1>
+          <h2 class="hero__sub" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">meet Rishita Shaw</h2>
         </div>
         <div class="intro-img">
           <img src="" alt="" />
@@ -105,17 +96,27 @@
         <div class="row">
           <div class="col">
             <div class="feat-des">
-              <h3 class="feat-wo">FEATURED ACHIEVEMENT</h3>
+              <h3 class="feat-wo" data-aos="fade-left"
+
+
+     data-aos-duration="500">FEATURED ACHIEVEMENT</h3>
               <br />
-              <h1 class="wo">Android app development using kotlin</h1>
+              <h1 class="wo" data-aos="fade-up" data-aos-duration="600">Android app development using kotlin</h1>
               <br />
-              I've successfully completed ANDROID STUDY JAMS on Kotlin, the
-              language of choice for native Android app development. It covered
-              various arenas of app development.
+              <div data-aos="fade-zoom-in"
+     data-aos-easing="ease-in-back"
+     data-aos-delay="100"
+     data-aos-offset="0">
+                I've successfully completed ANDROID STUDY JAMS on Kotlin, the
+                language of choice for native Android app development. It covered
+                various arenas of app development.
+              </div>
+
             </div>
           </div>
           <div class="col">
-            <div class="feat-img">
+            <div class="feat-img" data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom">
               <img src="img/Rishita Shaw.png" height="250" width="350" alt="" />
             </div>
           </div>
@@ -163,9 +164,11 @@
     <section id="skill">
       <div class="skills__main">
         <h1 class="my-skills u-margin-top-small">My Skills</h1>
-        <div class="skills__secondary">
-          <div class="skill__container">
-            <div class="skill__cont">
+        <div class="skills__secondary" >
+          <div class="skill__container" data-aos="flip-left"
+   data-aos-easing="ease-out-cubic"
+   data-aos-duration="2000">
+            <div class="skill__cont" >
               <img class="skill__svg" src="svgs/heart.svg" alt="logo" />
               <h3 class="skill__name">Front End</h3>
               <div class="points">
@@ -175,7 +178,9 @@
               </div>
             </div>
           </div>
-          <div class="skill__container">
+          <div class="skill__container" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
             <div class="skill__cont">
               <img class="skill__svg" src="svgs/board1.svg" alt="logo" />
 
@@ -187,7 +192,9 @@
               </div>
             </div>
           </div>
-          <div class="skill__container">
+          <div class="skill__container" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
             <div class="skill__cont">
               <img class="skill__svg" src="svgs/hour.svg" alt="logo" />
               <h3 class="skill__name">Softwares</h3>
@@ -203,12 +210,14 @@
     </section>
 
     <section id="about-me">
-      <h1>GET TO KNOW RISHITA!</h1>
+      <h1 class="about__name" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="900">GET TO KNOW RISHITA!</h1>
       <div class="img-pro" width="25%" height="25%">
         <img src="img/circle-cropped (1).png" alt="profile pic" />
       </div>
 
-      <div class="about">
+      <div class="about" data-aos="fade-up" data-aos-duration="950">
         <p>
           Hello! I am Rishita Shaw. I am a first year student at National
           Institute of Technology, Durgapur.
@@ -277,5 +286,26 @@
     <footer class="footer">
       <p>&copy; RISHITA SHAW 2021</p>
     </footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
   </body>
 </html>
