--- a/index.html
+++ b/index.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>RISHITA SHAW</title>
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="shortcut icon"
-      href="img/circle-cropped (1).png"
-      type="image/x-icon"
-    />
+<head>
+  <meta charset="utf-8" />
+  <title>RISHITA SHAW</title>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="shortcut icon" href="img/circle-cropped (1).png" type="image/x-icon" />
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,300;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,300;1,700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
 
-  <body>
-    <!-- <section id="nav">
+<body>
+  <!-- <section id="nav">
   <div class="row nav-nav">
     <div class="col name-nav">
       RISHITA SHAW
@@ -55,76 +44,76 @@
   </div>
 </section> -->
 
-    <section id="nav">
-      <div class="name-nav">RISHITA SHAW</div>
-      <div>
-        <nav class="navbar">
-          <ul class="navbar">
-            <li class="nav-item">
-              <a class="nav-link" href="#skill">My Skills</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about-me">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#hire-me">Hire Me</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </section>
+  <section id="nav">
 
-    <section id="intro">
+
+
+          <div id="name-nav">RISHITA SHAW</div>
+
+
+        <div class="nav-fix">
+          <nav class="navbar">
+            <ul class="navbar">
+              <li class="nav-item">
+                <a class="nav-link" href="#skills">My Skills</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about-me">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#hire-me">Hire Me</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+
+
+
+  </section>
+
+  <section id="intro">
+    <video autoplay muted loop class="myVideo">
+      <source src="Dark Green Forest in the Fog.mp4" type="video/mp4">
+    </video>
+    <div class="row">
+      <div class="col">
+        <h1 class="hero" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0" data-aos-duration="1000">EXPERIENCE WEB DEVELOPMENT ON ANOTHER LEVEL!</h1>
+        <h2 class="hero__sub" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">meet Rishita Shaw</h2>
+      </div>
+      <div class="intro-img">
+        <img src="" alt="" />
+      </div>
+    </div>
+  </section>
+
+  <section id="featured">
+    <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="hero" data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-
-     data-aos-offset="0" data-aos-duration="1000">EXPERIENCE WEB DEVELOPMENT ON ANOTHER LEVEL!</h1>
-          <h2 class="hero__sub" data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="1500">meet Rishita Shaw</h2>
-        </div>
-        <div class="intro-img">
-          <img src="" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <section id="featured">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="feat-des">
-              <h3 class="feat-wo" data-aos="fade-left"
-
-
-     data-aos-duration="500">FEATURED ACHIEVEMENT</h3>
-              <br />
-              <h1 class="wo" data-aos="fade-up" data-aos-duration="600">Android app development using kotlin</h1>
-              <br />
-              <div data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="100"
-     data-aos-offset="0">
-                I've successfully completed ANDROID STUDY JAMS on Kotlin, the
-                language of choice for native Android app development. It covered
-                various arenas of app development.
-              </div>
-
+          <div class="feat-des">
+            <h3 class="feat-wo" data-aos="fade-left" data-aos-duration="500">FEATURED ACHIEVEMENT</h3>
+            <br />
+            <h1 class="wo" data-aos="fade-up" data-aos-duration="600">Android app development using kotlin</h1>
+            <br />
+            <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100" data-aos-offset="0">
+              I've successfully completed ANDROID STUDY JAMS on Kotlin, the
+              language of choice for native Android app development. It covered
+              various arenas of app development.
             </div>
+
           </div>
-          <div class="col">
-            <div class="feat-img" data-aos="fade-up"
-     data-aos-anchor-placement="bottom-bottom">
-              <img src="img/Rishita Shaw.png" height="250" width="350" alt="" />
-            </div>
+        </div>
+        <div class="col">
+          <div class="feat-img" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+            <img src="img/Rishita Shaw.png" height="250" width="350" alt="" />
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!--
+  <!--
   <section id="skills">
     <h1 class="my-skills">My Skills</h1>
     <div class="container">
@@ -161,79 +150,71 @@
     </div>
   </section> -->
 
-    <section id="skill">
-      <div class="skills__main">
-        <h1 class="my-skills u-margin-top-small">My Skills</h1>
-        <div class="skills__secondary" >
-          <div class="skill__container" data-aos="flip-left"
-   data-aos-easing="ease-out-cubic"
-   data-aos-duration="2000">
-            <div class="skill__cont" >
-              <img class="skill__svg" src="svgs/heart.svg" alt="logo" />
-              <h3 class="skill__name">Front End</h3>
-              <div class="points">
-                <p class="points__text">HTML</p>
-                <p class="points__text">CSS</p>
-                <p class="points__text">UI/UX</p>
-              </div>
+  <section id="skill">
+    <div class="skills__main">
+      <h1 class="my-skills u-margin-top-small">My Skills</h1>
+      <div class="skills__secondary">
+        <div class="skill__container" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+          <div class="skill__cont">
+            <img class="skill__svg" src="svgs/heart.svg" alt="logo" />
+            <h3 class="skill__name">Front End</h3>
+            <div class="points">
+              <p class="points__text">HTML</p>
+              <p class="points__text">CSS</p>
+              <p class="points__text">UI/UX</p>
             </div>
           </div>
-          <div class="skill__container" data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
-     data-aos-duration="2000">
-            <div class="skill__cont">
-              <img class="skill__svg" src="svgs/board1.svg" alt="logo" />
+        </div>
+        <div class="skill__container" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+          <div class="skill__cont">
+            <img class="skill__svg" src="svgs/board1.svg" alt="logo" />
 
-              <h3 class="skill__name">Back End</h3>
-              <div class="points">
-                <p class="points__text">kotlin</p>
-                <p class="points__text">django</p>
-                <p class="points__text">python</p>
-              </div>
+            <h3 class="skill__name">Back End</h3>
+            <div class="points">
+              <p class="points__text">kotlin</p>
+              <p class="points__text">django</p>
+              <p class="points__text">python</p>
             </div>
           </div>
-          <div class="skill__container" data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
-     data-aos-duration="2000">
-            <div class="skill__cont">
-              <img class="skill__svg" src="svgs/hour.svg" alt="logo" />
-              <h3 class="skill__name">Softwares</h3>
-              <div class="points">
-                <p class="points__text">c</p>
-                <p class="points__text">c++</p>
-                <p class="points__text">python</p>
-              </div>
+        </div>
+        <div class="skill__container" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+          <div class="skill__cont">
+            <img class="skill__svg" src="svgs/hour.svg" alt="logo" />
+            <h3 class="skill__name">Softwares</h3>
+            <div class="points">
+              <p class="points__text">c</p>
+              <p class="points__text">c++</p>
+              <p class="points__text">python</p>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="about-me">
-      <h1 class="about__name" data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="900">GET TO KNOW RISHITA!</h1>
-      <div class="img-pro" width="25%" height="25%">
-        <img src="img/circle-cropped (1).png" alt="profile pic" />
-      </div>
+  <section id="about-me">
+    <h1 class="about__name" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="900">GET TO KNOW RISHITA!</h1>
+    <div class="img-pro" width="25%" height="25%">
+      <img src="img/circle-cropped (1).png" alt="profile pic" />
+    </div>
 
-      <div class="about" data-aos="fade-up" data-aos-duration="950">
-        <p>
-          Hello! I am Rishita Shaw. I am a first year student at National
-          Institute of Technology, Durgapur.
-        </p>
-        <p class="about__text">I love coffee, books, and coding.</p>
-        <p>How about we discuss our next project?</p>
-      </div>
-    </section>
+    <div class="about" data-aos="fade-up" data-aos-duration="950">
+      <p>
+        Hello! I am Rishita Shaw. I am a first year student at National
+        Institute of Technology, Durgapur.
+      </p>
+      <p class="about__text">I love coffee, books, and coding.</p>
+      <p>How about we discuss our next project?</p>
+    </div>
+  </section>
 
-    <section id="hire-me">
-      <img src="logo" alt="" />
-      <img src="logo" alt="" />
-      <img src="logo" alt="" />
-    </section>
+  <section id="hire-me">
+    <img src="logo" alt="" />
+    <img src="logo" alt="" />
+    <img src="logo" alt="" />
+  </section>
 
-    <!-- <section id="hire-me">
+  <!-- <section id="hire-me">
   <div class="container logo hire__socials">
 <div class="row">
 
@@ -265,47 +246,36 @@
 </div>
 </section> -->
 
-    <section id="hire-me">
-      <div class="hire__element">
-        <a href="https://github.com/Theseregrets">
-          <img src="svgs/github-seeklogo.com.svg" class="hire__svg" />
-        </a>
-      </div>
-      <div class="hire__element">
-        <a href="https://www.facebook.com/aarti.ahuja.50596/">
-          <img src="svgs/facebook-black-48dp.svg" class="hire__svg" />
-        </a>
-      </div>
-      <div class="hire__element">
-        <a href="https://www.linkedin.com/in/rishita-shaw-75901a186/">
-          <img src="svgs/linkedin-icon-seeklogo.com.svg" class="hire__svg" />
-        </a>
-      </div>
-    </section>
+  <section id="hire-me">
+    <div class="hire__element">
+      <a href="https://github.com/Theseregrets">
+        <img src="svgs/github-seeklogo.com.svg" class="hire__svg" />
+      </a>
+    </div>
+    <div class="hire__element">
+      <a href="https://www.facebook.com/aarti.ahuja.50596/">
+        <img src="svgs/facebook-black-48dp.svg" class="hire__svg" />
+      </a>
+    </div>
+    <div class="hire__element">
+      <a href="https://www.linkedin.com/in/rishita-shaw-75901a186/">
+        <img src="svgs/linkedin-icon-seeklogo.com.svg" class="hire__svg" />
+      </a>
+    </div>
+  </section>
 
-    <footer class="footer">
-      <p>&copy; RISHITA SHAW 2021</p>
-    </footer>
+  <footer class="footer">
+    <p>&copy; RISHITA SHAW 2021</p>
+  </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
 
-  </body>
+</body>
+
 </html>
