--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="points">
               <p class="points__text">kotlin</p>
               <p class="points__text">django</p>
-              <p class="points__text">python</p>
+              <p class="points__text">java script</p>
             </div>
           </div>
         </div>
